modifs commit ok

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         <div class="images-inner">
           <div class="image-slide">
             <div
-              class="image" style="background: url('././img-webp/image1.webp') center / cover">
+              class="image" style="background: url('././img-webp/des-palmiers.webp') center / cover">
           </div>
           </div>
           <div class="image-slide">
             <div
-              class="image" style="background: url('././img-webp/image2.webp') center / cover">
+              class="image" style="background: url('././img-webp/coucher-de-soleil.webp') center / cover">
           </div>
           </div>
           <div class="image-slide">
             <div
-              class="image" style="background: url('././img-webp/image4.webp') center / cover">
+              class="image" style="background: url('././img-webp/inspiration-marine.webp') center / cover">
           </div>
           </div>
         </div>
@@ -66,19 +66,19 @@
 
       <section class="gallery">
         <div class="gallery-item">
-          <img src="././img-webp/image1.webp" alt="Des palmiers" />
+          <img src="././img-webp/des-palmiers.webp" alt="Des palmiers" />
           <p>Des palmiers pour un voyage haut en couleurs.</p>
         </div>
         <div class="gallery-item">
-          <img src="././img-webp/image2.webp" alt="Coucher de soleil" />
+          <img src="././img-webp/coucher-de-soleil.webp" alt="Coucher de soleil" />
           <p>Un coucher de soleil sur une nation flamboyante.</p>
         </div>
         <div class="gallery-item">
-          <img src="././img-webp/image3.webp" alt="Horizon marin" />
+          <img src="././img-webp/horizon-marin.webp" alt="Horizon marin" />
           <p>La mer comme seul horizon.</p>
         </div>
         <div class="gallery-item">
-          <img src="././img-webp/image4.webp" alt="Inspiration marine" />
+          <img src="././img-webp/inspiration-marine.webp" alt="Inspiration marine" />
           <p>La mer comme grande source d'inspiration.</p>
         </div>
       </section>
