finale remise à niveau du portfolio John Doe

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         id="play1"
         checked
       />
-
+<!-- slides -->
       <div class="images">
         <div class="images-inner">
           <div class="image-slide">
