--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description" content="John Doe Photography - la vie, la vraie. Découvrez des photos magnifiques de nature, d'événements et de personnes."/>
     <title>John Doe Photography</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/a.css" />
+    <link rel="stylesheet" href="a.css" />
   </head>
 
   <body>
